Enum "orders_status" {
  "created"
  "running"
  "done"
  "failure"
}

Enum "product status" {
  "Out of Stock"
  "In Stock"
}

Table "orders" {
  "id" int [pk, increment]
  "user_id" int [unique, not null]
  "status" orders_status
}

Table "order_items" {
  "order_id" int
  "product_id" int
  "quantity" int [default: 1]
}

Table "products" {
  "id" int [pk]
  "name" nvarchar2(255)
  "merchant_id" int [not null]
  "price" int
  "status" "product status"
  "created_at" timestamp [default: `current_timestamp`]

  Indexes {
    (merchant_id, status) [name: "product_status"]
  }
}

Table "users" {
  "id" int [pk]
  "full_name" nvarchar2(255)
  "email" nvarchar2(255) [unique]
  "gender" nvarchar2(255)
  "date_of_birth" date
  "created_at" timestamp
  "country_code" int
}

Table "merchants" {
  "id" int [pk]
  "merchant_name" nvarchar2(255)
  "country_code" int
  "created_at" timestamp
  "admin_id" int
}

Table "countries" {
  "code" int [pk]
  "name" nvarchar2(255)
}

Ref:"orders"."id" < "order_items"."order_id"

Ref:"products"."id" < "order_items"."product_id"

Ref:"countries"."code" < "users"."country_code"

Ref:"countries"."code" < "merchants"."country_code"

Ref:"merchants"."id" < "products"."merchant_id"

Ref:"users"."id" < "merchants"."admin_id"
